--- a/main.tex
+++ b/main.tex
@@ -732,6 +732,15 @@ MGARCH model:
     y_t = \alpha_0 + \alpha_1 y_{t-1} + \gamma \sigma_t + u_t
 \end{gather}
 
+\subsubsection{Regime Change}
+State dependent regression:
+\begin{gather}
+    y_t = \alpha_1 + \beta_1 y_{t-1} + u_{1t} \text{ if } S_t = 1 \\
+    y_t = \alpha_2 + \beta_2 y_{t-1} + u_{2t} \text{ if } S_t = 2
+\end{gather}
+
+Regression can also be determined from Chow test with dummy variable. Utilize Quandt test for multiple state changes.
+
 \section{Appendix}
 \label{sec:appendix}
 
